--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <p>Certificate ID : FSP/2024/8/10179767</p>
     <p>Candidate : Siddhartha Voorugonda</p>
     <p>Assessment Name : Digital 101 – 30 Hours</p>
-    <p>Candidate Email: lokeshreddy25p@gmail.com</p>
-    <p>Date of issuse : 11/08/2024</p>
-    <p>Percentage Marks Overall:82.00</p>
+    <p>Candidate Email: siddharthavoorugonda0829@@gmail.com</p>
+    <p>Date of issuse : 13/08/2024</p>
+    <p>Percentage Marks Overall:86.00</p>
 </body>
 </html>
