--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="icon" href="salesforce-logo.svg" type="image/png">
 </head>
 <body>
-    <p>Certificate ID : FSP/2024/8/10179825</p>
-    <p>Candidate : Siddhartha Voorugonda</p>
+    <p>Certificate ID : FSP/2024/8/10179758</p>
+    <p>Candidate : Srupada Sri Harsha</p>
     <p>Assessment Name : Digital 101 – 30 Hours</p>
-    <p>Candidate Email: siddharthavoorugonda0829@@gmail.com</p>
-    <p>Date of issuse : 13/08/2024</p>
-    <p>Percentage Marks Overall:86.00</p>
+    <p>Candidate Email: sripadasriharsha228@gmail.com</p>
+    <p>Date of issuse : 12/08/2024</p>
+    <p>Percentage Marks Overall:84.00</p>
 </body>
 </html>
