--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <p>Certificate ID : FSP/2024/8/10179758</p>
-    <p>Candidate : Srupada Sri Harsha</p>
+    <p>Candidate : Sripada Sri Harsha</p>
     <p>Assessment Name : Digital 101 – 30 Hours</p>
     <p>Candidate Email: sripadasriharsha228@gmail.com</p>
     <p>Date of issuse : 12/08/2024</p>
